apps/api/base/don-schema-register/don-schema-register-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: don-schema-register-dpl
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    spec:
      containers:
        - name: don-schema-register
          image: don-schema-register
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 1
