apps/api/base/don-schema-register/don-schema-register-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: don-schema-register-svc
spec:
  ports:
    - port: 8000
      targetPort: http
