apps/api/base/don-schema-register/don-schema-register-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: don-schema-register-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: set-in-overlay
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: don-schema-register-svc
                port:
                  number: 8000
  tls:
    - hosts:
        - set-in-overlay
      secretName: don-schema-register-tls
